--- a/app/src/main/res/layout/activity_rule.xml
+++ b/app/src/main/res/layout/activity_rule.xml
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.976"
         tools:text="スタート" />
 
-    <ImageView
+    <ImageSwitcher
         android:id="@+id/ruleView"
         android:layout_width="298dp"
         android:layout_height="585dp"
