--- a/app/src/main/res/layout/activity_rule.xml
+++ b/app/src/main/res/layout/activity_rule.xml
@@ -60,7 +60,7 @@
         tools:text="スタート" />
 
     <ImageSwitcher
-        android:id="@+id/ruleView1"
+        android:id="@+id/ruleView"
         android:layout_width="298dp"
         android:layout_height="585dp"
         android:contentDescription="@string/ruleImage"
