--- a/app/src/main/res/layout/activity_difficulty.xml
+++ b/app/src/main/res/layout/activity_difficulty.xml
@@ -13,10 +13,12 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:onClick="onTitleBackTapped"
         app:backgroundTint="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="タイトルに戻る" />
+        tools:text="タイトルに戻る"
+        tools:ignore="UsingOnClickInXml" />
 
     <TextView
         android:id="@+id/textView"
@@ -34,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:onClick="onDifficultyButton"
         android:textSize="24sp"
         app:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:onClick="onDifficultyButton"
         android:textSize="24sp"
         app:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,6 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:onClick="onDifficultyButton"
         android:textSize="24sp"
         app:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
