--- a/app/src/main/res/layout/activity_endless.xml
+++ b/app/src/main/res/layout/activity_endless.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BattleActivity">
-
+    tools:context=".Endless">
     <ImageButton
         android:id="@+id/guButton"
         android:layout_width="100dp"
