--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,26 +8,26 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="380dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="48dp"
-        android:textSize="48sp"
+        android:text="@string/たたいてかぶって"
+        android:textSize="34sp"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/たたいてかぶって" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:textSize="48sp"
+        android:text="@string/jankenpon"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        tools:text="じゃんけんポン" />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <Button
         android:id="@+id/Startbutton"
@@ -35,12 +35,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:onClick="onStartButton"
+        android:text="@string/start"
         android:textSize="20sp"
         app:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        tools:text="スタート"
         tools:ignore="UsingOnClickInXml" />
 
     <Button
@@ -49,29 +49,29 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:onClick="onRuleButton"
+        android:text="@string/Rule"
         android:textSize="20sp"
         app:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Startbutton"
-        tools:text="遊び方"
         tools:ignore="UsingOnClickInXml" />
 
     <Button
         android:id="@+id/Rankbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:layout_marginBottom="68dp"
         android:onClick="onRankButton"
+        android:text="@string/Rank"
         android:textSize="20sp"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Rulebutton"
-        tools:text="ランキング"
         tools:ignore="UsingOnClickInXml" />
 
     <ImageView
@@ -82,6 +82,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title2"
+        app:srcCompat="@drawable/kids_tataitekabutte"
         tools:srcCompat="@drawable/kids_tataitekabutte" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
