--- a/app/src/main/res/layout/activity_difficulty2.xml
+++ b/app/src/main/res/layout/activity_difficulty2.xml
@@ -14,10 +14,10 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:onClick="onTitleBackTapped"
+        android:text="@string/Back"
         app:backgroundTint="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="タイトルに戻る"
         tools:ignore="UsingOnClickInXml" />
 
     <TextView
@@ -25,11 +25,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:text="@string/nanidowoerandene"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TitleBack"
-        tools:text="難易度を選んでね" />
+        app:layout_constraintTop_toBottomOf="@+id/TitleBack" />
 
     <Button
         android:id="@+id/Easybutton"
@@ -37,12 +37,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:onClick="onDifficultyButton"
+        android:text="@string/Easy"
         android:textSize="24sp"
         app:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:text="Easy"
         tools:ignore="UsingOnClickInXml" />
 
     <Button
@@ -51,12 +51,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:onClick="onDifficultyButton"
+        android:text="@string/Normal"
         android:textSize="24sp"
         app:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Easybutton"
-        tools:text="Normal"
         tools:ignore="UsingOnClickInXml" />
 
     <Button
@@ -65,12 +65,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:onClick="onDifficultyButton"
+        android:text="@string/Hard"
         android:textSize="24sp"
         app:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Normalbutton"
-        tools:text="Hard"
         tools:ignore="UsingOnClickInXml" />
 
     <Button
@@ -78,11 +78,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:text="@string/Endless"
         android:textSize="24sp"
         app:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Hardbutton"
-        tools:text="Endless" />
+        app:layout_constraintTop_toBottomOf="@+id/Hardbutton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
