--- a/app/src/main/res/layout/activity_rule2.xml
+++ b/app/src/main/res/layout/activity_rule2.xml
@@ -14,24 +14,24 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:onClick="onTitleBackTapped"
+        android:text="@string/Back"
         app:backgroundTint="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="タイトルに戻る"
         tools:ignore="UsingOnClickInXml" />
 
     <Button
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/back"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976"
-        tools:text="前へ" />
+        app:layout_constraintVertical_bias="0.976" />
 
     <Button
         android:id="@+id/nextButton"
@@ -39,20 +39,21 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
         android:layout_marginLeft="3dp"
+        android:text="@string/next"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toEndOf="@+id/backButton"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976"
-        tools:text="次へ" />
+        app:layout_constraintVertical_bias="0.976" />
 
     <Button
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onStartButtonTapped"
+        android:text="@string/start"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,13 +61,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976"
-        tools:text="スタート"
         tools:ignore="UsingOnClickInXml" />
 
     <ImageSwitcher
         android:id="@+id/ruleView"
-        android:layout_width="298dp"
-        android:layout_height="585dp"
+        android:layout_width="wrap_content"
+        android:layout_height="500dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
