たたいてかぶってじゃんけんぽん(画面遷移不可)

--- a/app/src/main/res/layout/activity_difficulty2.xml
+++ b/app/src/main/res/layout/activity_difficulty2.xml
@@ -36,7 +36,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:onClick="onDifficultyButton"
         android:text="@string/Easy"
         android:textSize="24sp"
         app:backgroundTint="@color/black"
@@ -50,7 +49,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:onClick="onDifficultyButton"
         android:text="@string/Normal"
         android:textSize="24sp"
         app:backgroundTint="@color/black"
@@ -64,7 +62,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:onClick="onDifficultyButton"
         android:text="@string/Hard"
         android:textSize="24sp"
         app:backgroundTint="@color/black"
@@ -78,6 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:onClick="onEndlessButton"
         android:text="@string/Endless"
         android:textSize="24sp"
         app:backgroundTint="@color/black"
