--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         app:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/TitleView" />
 
     <Button
         android:id="@+id/Rulebutton"
@@ -74,7 +74,7 @@
         tools:ignore="UsingOnClickInXml" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/TitleView"
         android:layout_width="270dp"
         android:layout_height="210dp"
         android:contentDescription="@string/たたいてかぶって"
